[package]
name = "cam-pipeline-rust"
version = "0.1.0"
authors = ["Jason Reilly <jdr0887@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
crepe = "^0.1"
curie = "0.0.8"
dirs = "^3.0"
env_logger = "^0.8"
horned-functional = "^0.1"
horned-owl = "^0.9"
humantime = "^2.0"
itertools = "0.10.0"
lazy_static = "^1.3"
log = { version = "^0.4", features = ["std"] }
oxigraph = { version = "^0.2", features = ["sophia", "rocksdb"]}
rayon = "^1.5"
regex = "^1.4"
rio_api = { version = "^0.5", features = ["sophia_api"]}
rio_turtle = { version = "^0.5", features = ["sophia_api"]}
sophia = "^0.6"
sophia_api = "^0.6"
structopt = "^0.2"
ureq = "^2.0"
walkdir = "^2.3"
