[package]
name = "cam-pipeline-rust"
version = "0.1.0"
authors = ["Jason Reilly <jdr0887@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
crepe = "^0.1"
curie = "^0.1"
dirs = "^3.0"
env_logger = "^0.9"
horned-functional = "^0.1"
horned-owl = "^0.9"
humantime = "^2.0"
itertools = "^0.10"
lazy_static = "^1.4"
log = { version = "^0.4", features = ["std"] }
oxigraph = { version = "^0.2", features = ["sophia", "rocksdb"]}
rayon = "^1.5"
regex = "^1.5"
rio_api = { version = "^0.5", features = ["sophia_api"]}
rio_turtle = { version = "^0.5", features = ["sophia_api"]}
sophia = { version = "^0.7", features = ["default", "xml"]}
sophia_api = "^0.7"
structopt = "^0.3"
ureq = "^2.2"
walkdir = "^2.3"
